--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+    <load src="./partials/header.html" />
+      <main>
+      <load src="./partials/hero.html" />
+      <load src="./partials/about-me-introduction.html" />
+      <load src="./partials/about-me.html" />
+      <load src="./partials/benefits.html" />
+      <load src="./partials/projects.html" />
+      <load src="./partials/faq.html" />
+      <load src="./partials/covers.html" />
+      <load src="./partials/reviews.html" />
+      <load src="./partials/work-together.html" />
+      <load src="" />
     </main>
-
-    <load src="./partials/footer.html" />
-
     <script type="module" src="./main.js"></script>
   </body>
 </html>
